@@ -1,6 +1,8 @@
 2011-07-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* debbugs.el (debbugs-send-control-message): Add severity and "done".
+	(debbugs-select-report): Set the minor summary mode in the right
+	buffer.
 
 2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
